# Animator-Pro

./: .clang-format  .clangformat  .gitignore  BUILD_PJ.txt  CMakeLists.txt  LICENSE  README  README.MD  README.markdown  bootstrap_ios.sh  bootstrap_vs.bat  bootstrap_xcode.sh  makefile  poco_notes.md
src/: .gitignore  CMakeLists.txt  a3d.c  about_box.c  auto.c  browse.c  celmenu.c  celpaste.c  celpull.c  cfit.c  cleanup.c  composit.c  cursor.c  cutcurs.c  files.c  fli.c  flicel.c  flicelio.c  flipath.c  gel.c  grid.c  inkdot2.c  inkopts.c  macro.c  main.c  mainpull.c  mask.c  messages.c  multimen.c  overlay.c  pentools.c  picfiles.c  pocodraw.c  pocofunc.c  pocotur.c  pocotwee.c  polytool.c  pstamp.c  qpoco.c  quickdat.c  (+20 more)
src/COMMON/: a1blit_.c  a1blit_.h  a2blit_.c  a2blit_.h  blit8_.c  blit8_.h  cblock_.c  cblock_.h  clipit_.c  clipit_.h  closest_.c  closest_.h  comp_.c  comp_.h  fccomp.c  fccomp.h  fs.c  fs.h  fs_dos.c  fs_unix.c  gemfont.h  io_.h  io_sdl.c  io_sdl.h  jfile.c  jfile.h  jimk0.h  lccomp.c  lccomp.h  peekpok_.c  peekpok_.h  ptr.c  ptr.h  rfont.c  rfont.h  sixhi.c  truecol_.c  truecol_.h  unbrun_.c  unbrun_.h
src/CROP/: A2BLIT.ASM  ABUGS.DOC  ANIM.STR  CHOICES.C  CLIPLINE.ASM  CPACK.C  CROPPULL.C  DISKERR.C  DOSSTUFF.H  FCCOMP.C  FOOLWCC2.C  JIFF.H  LCCOMP.C  LINKIT  MAIN.C  MAKEFILE  MAKESTR  MEMORY.C  Makefile  Makefile.tc  PCX.C  SCALE.C  VISION.C  a1blit.asm  amigapic.c  amigapic.str  anim.c  anim.h  bfile.c  blit.c  blit8.asm  cblock.asm  cel.c  choices.c  closestc.asm  comp.asm  comprs.c  cpack.c  cpack.str  crop.c  (+60 more)
src/PJ/: 3PAGE.TXT  ALLFONTS.LST  ASLMKBLD.BAT  AUTO.C  BADFONTS.TXT  BEEP.BAT  BIND.BAT  BINDALL.BAT  BREAKFAS.POC  BREAKOUT.POC  BUG.101  BUG.98  BUG.DOC  BUG.REP  CB.BAT  CC.BAT  CLEANUP.C  CLOCK01.POC  CLOCK02.POC  CMakeLists.txt  COMPOSMU.C  CONVERT.BAT  CONVERT.DBG  CUBE.POC  CYCLE.POC  CYCLE02.POC  DELETED.BAT  DELUM.BAT  DIFFIT.BAT  DRIV1.LST  DRIV3.LST  ECO02.POC  FATSOF08.POC  FATSOF15.POC  FATSOF16.POC  FATSOFT2.POC  FATSOFT3.POC  FATSOFT4.POC  FATSOFT5.POC  FILEBUG.POC  (+181 more)
src/PLAY/: A1BLIT.ASM  A2BLIT.ASM  BFILE.C  BLIT8.ASM  CBLOCK.ASM  DECODER.C  DISKERR.C  FEELMENU.C  FILEDATA.C  FILEMENU.C  FLICMENU.H  GEMFONT.H  INITCMAP.C  JIMK.H  KBD.ASM  LINKIT  MAIN.C  MAIN.STR  MAINMENU.C  MAKEFILE  Makefile  Makefile.tc  PEEKPOKE.ASM  PRJ1.STR  PRJCTOR.H  PULL.C  SLIDER.C  STUBS.C  SUBS.IN  TEXTBOX.C  TEXTBOX.STR  TRANSIT.C  bfile.c  cblock.asm  clipit.asm  closestc.asm  comp.asm  debug.c  decoder.c  dosstuff.c  (+38 more)
src/QUICKFLI/: FLI.C  JIMK.H  LINKIT  MAKEFILE  Makefile  Makefile.tc  PEEKPOKE.ASM  comp.asm  comp1.c  comp1.h  debug.h  fli.c  fli.h  io.h  io_dos.c  io_sdl.c  jfile.c  jimk.h  peekpok1.c  peekpok1.h  peekpoke.asm  quickfli.c  sys_sdl.c  unbrun1.c  unbrun1.h
src/V/: A3D.C  ABUGS.279  BLACK.SET  BLIT8.ASM  BROWSE.STR  CFONT.C  CFONT.STR  CLINE.C  CLUSTER.STR  COMMONST.C  COMPRS.C  DIAG.ASM  DOSSTUFF.H  DRAWMODE.C  DRAWMODE.STR  ENTER04.PLY  FEELMENU.C  FILEDATA.STR  FILES.C  FREEM.C  GARAMO10.FNT  GEOMETRY.C  GFX.C  GIF.C  GLOBALS.C  GRID.STR  INKS.TXT  JFILE.STR  LCCOMP.C  LINKIT  MARQI.STR  MASK.STR  MEMORY.C  MEMORY.STR  MENUTREE.TXT  MORFDATA.C  MULTIMEN.STR  Makefile  NEWBUGS.TXT  OVERLAY.STR  (+157 more)
src/common/: blit8_.c  clipit_.c  clipit_.h  comp_.c  comp_.h  fccomp.c  fs.c  fs.h  fs_dos.c  gemfont.h  io_.h  io_dos.c  io_dos.h  io_sdl.c  jfile.c  jimk0.h  lccomp.c  lccomp.h  peekpok_.c  peekpok_.h  ptr.c  rfont.c  rfont.h  truecol_.c  unbrun_.c  unbrun_.h
src/convert/: CONVERT.LNK  convert.c  convert.h  convrgb.c  flipdr.c  ghash.c  rgbcmap.h
src/crop/: CODE.DOC  CROP.DOC  LINKIT  Makefile  Makefile.tc  OVERLAY.LIB  PICEM.DOC  PIXELSRC.P  VPIC.DOC  a3d.h  amigapic.c  anim.h  bfile.c  bfile.h  cel.c  choices.c  comp.asm  comprs.c  cpack.c  crop.h  crop.str  croppull.c  cursorda.c  decoder.c  dosstuff.c  feelmenu.c  filedata.c  filemenu.c  flicmenu.h  gif.c  gif.str  globals.str  init.c  init.str  initcmap.c  input.c  jfile.str  jfileerr.c  jfileerr.h  jimk.h  (+34 more)
src/doc/: BIG.DOC  CODE.DOC  PJ64.DOC  POCOBUGS.DOC  POCONEW.DOC  POCOWISH.DOC  README.101  SETTINGS.DOC
src/fileio/: CMakeLists.txt  dfile.ih  fpaddsub.c  fpconcat.c  fpsuffin.c  fpsufhas.c  fs_unix.c  jdevsget.c  jfcopyin.c  jfcpdat.c  jfile.c  jfpisfix.c  jfwrite0.c  tfile.c  xfile.c
src/fli/: MAKEFILE  addfirst.c  brunline.c  bufsize.c  comp_ani.c  compbrun.c  complcc.c  compss2.c  emptyrec.c  fliclose.c  flicomp.c  flipstam.c  info.c  isempty.c  readfirs.c  readunc.c  readunc1.c  skipbrun.c  unbrun.c  uncomp.c  unscbrun.c
src/flic386p/: VERSIONS.DOC  pjbasics.h  pjcustom.h  pjecodes.h  pjfli.h  pjgfx.h  pjltypes.h  pjprotos.h  pjstypes.h
src/font/: FIXED.OC  cfont.c  fontdev.c  stfont.c  vfont.c  wwcountl.c  wwcstart.c  wwjustif.c  wwline.c  wwtext.c
src/gfx/: cmapcopy.c  cmclone.c  cmhlsrgb.c  cminctab.c  fgitfang.c  gfx.ih  gl_sclin.c  glcircle.c  glcline.c  gldcircl.c  gldoval.c  glrcircl.c  pbxlatbl.c  pgfilled.c  rcelfree.c  rcvrtual.c  rebclipd.c  recrolap.c  rectand.c  refrator.c  rgublit.c  rgxlatra.c  scalebli.c
src/inc/: MATHHOST.I  aaconfig.h  alt.h  asm.h  auto.h  bhash.h  broadcas.h  browse.h  cmap.h  compiler.h  composit.h  dpmiutil.h  errcodes.c  errcodes.h  filemenu.h  filepath.h  fli.h  flicel.h  flx.h  fpmath.h  ftextf.h  gfx.h  gfxlib.h  gfxlib.ih  inkdot.h  input.h  jfile.h  mathhost.h  memory.h  menus.h  msfile.h  palmenu.h  palpul.h  pentools.h  picfile.h  pjassert.h  pjbasics.h  pjmain.h  poco_tween.h  pocoface.h  (+24 more)
src/input/: CMakeLists.txt  MAKEFILE  idr_sdl.c  idriver.c  input.c  inwaitup.c  upcinkey.c  waitask.c
src/makemenu/: MAKE.BAT  makemenu.c
src/menus/: icbcontb.c  icbvbool.c  icbvcont.c  menus.c  pull.c  pullid.c  qnumber.c  qscroll.c  seepath.c  slider.c  stringq.c  titlebar.c
src/picdrive/: CMakeLists.txt
src/pj/: ALLFONTS.POC  APWCOLPR.POC  BADBMP.POC  BREAKHB.POC  BUG.POC  BULLETS.POC  CCONE.POC  CELPLC.POC  CELPLC.TXT  CIRCLE.POC  CLIPEM.POC  CMAP.POC  CMakeLists.txt  CONCBOX.POC  CRASH05.POC  CR_UTIL.POC  (+133 more)
tests/: CMakeLists.txt  ffi_test.c  ffi_test.cc  nfd_test.c  sdl_test.c  sdl_test.cc  sdl_test.mm
(+4952 files in other folders)
