set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-missing-field-initializers")

set(PJHIGH_SRC_FILES
	bhash.c
	celalloc.c
	colload.c
	colsave.c
	commonst.c
	config.c
	cpack.c
	cursxlat.c
	defltcur.c
	devsels.c
	drivermu.c
	errcfind.c
	errcload.c
	errcusem.c
	errline.c
	errtext.c
	filemenu.c
	flipdr.c
	fontreq.c
	gifname.c
	images.c
	initcmap.c
	init_sdl.c
	jiffycon.c
	mainret.c
	mathhost.c
	minitime.c
	palread.c
	palwrite.c
	pdrmenu.c
	pdrpic.c
	pencel.c
	pichead.c
	picinfo.c
	picload.c
	picpdr.c
	picsave.c
	qchoice.c
	qscroll.c
	rastcurs.c
	resexist.c
	resource.c
	resoureq.c
	scodes.c
	scrainfo.c
	scrclose.c
	screenmu.c
	scrninit.c
	smucont.c
	smuerr.c
	smultbox.c
	smupull.c
	smuqrecn.c
	smuqreqn.c
	smuqreqs.c
	smuqrunu.c
	smutext.c
	smuttext.c
	smuvqren.c
	smuwaitb.c
	smuyesno.c
	temprcel.c
	timefunc.c
	timeslid.c
	toglmenu.c
	ttextf.c
	vqreqnum.c
	vqreqstr.c
	)

add_library(pjhigh ${PJHIGH_SRC_FILES})

target_link_libraries(pjhigh fontlib menulib)
