set(FLILIB_SRC_FILES
	addfirst.c
	addnext.c
	addring.c
	allocbuf.c
	brunline.c
	bufsize.c
	comp_ani.c
	compbrun.c
	complcc.c
	compss2.c
	create.c
	emptyrec.c
	fccomp.c
	fiicreat.c
	fliclose.c
	flicomp.c
	flicomp1.c
	flierror.c
	flione.c
	fliopen.c
	flipstam.c
	fliseek1.c
	fliwrap.c
	flushhdr.c
	info.c
	infosub.c
	isempty.c
	readcolo.c
	readfirs.c
	readhead.c
	readnext.c
	readunc.c
	readunc1.c
	skipbrun.c
	squaopen.c
	unbrun.c
	uncomp.c
	unscbrun.c
	userid.c
	writerec.c
	)

add_library(flilib ${FLILIB_SRC_FILES})
